--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,12 @@ body {
 
 .container {
     width: 90%;
-    max-width: 600px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     border-radius: 8px;
     animation: slide-in 0.5s ease-out;
+    background-color: antiquewhite;
 }
 
 h1 {
@@ -26,9 +26,17 @@ h1 {
     animation: fade-in 1s ease-in;
 }
 
-.balance, .totals, .controls, .filters {
+.totals {
     text-align: center;
     margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.balance, .controls, .filters {
+    text-align: center;
+    margin-bottom: 20px;
+    display: flex;
 }
 
 .controls input, .controls button {
