--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
+    background-color: #000000;
     color: #333;
     margin: 0;
     padding: 0;
@@ -18,7 +18,8 @@ body {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     border-radius: 8px;
     animation: slide-in 0.5s ease-out;
-    background-color: antiquewhite;
+    background-color: rgb(216, 216, 216);
+    max-width: 800px;
 }
 
 h1 {
